FIXMEs and error prone for more modules